News UAT/force-app/main/default/objects/Account__x/Account__x.object-meta.xml
<CustomObject>
    <externalDataSource>ARMuat</externalDataSource>
    <externalName>Account</externalName>
    <label>NRM Company</label>
    <pluralLabel>NRM Companies</pluralLabel>
</CustomObject>