News UAT/force-app/main/default/objects/Account__x/fields/ABN_c__c.field-meta.xml
<CustomField>
    <fullName>ABN_c__c</fullName>
    <externalDeveloperName>ABN__c</externalDeveloperName>
    <label>ABN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>