News UAT/force-app/main/default/objects/Account__x/fields/ABN_Substituted_c__c.field-meta.xml
<CustomField>
    <fullName>ABN_Substituted_c__c</fullName>
    <externalDeveloperName>ABN_Substituted__c</externalDeveloperName>
    <label>ABN_Substituted</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>