News UAT/force-app/main/default/objects/Account__x/fields/Account_Business_Unit_AUS_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Unit_AUS_c__c</fullName>
    <externalDeveloperName>Account_Business_Unit_AUS__c</externalDeveloperName>
    <label>Account Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIRLIE BEACH</fullName>
            </value>
            <value>
                <fullName>BIG RIGS</fullName>
            </value>
            <value>
                <fullName>BILOELA</fullName>
            </value>
            <value>
                <fullName>BRISBANE</fullName>
            </value>
            <value>
                <fullName>BUNDABERG</fullName>
            </value>
            <value>
                <fullName>COFFS HARBOUR</fullName>
            </value>
            <value>
                <fullName>CONTACT CENTRE</fullName>
            </value>
            <value>
                <fullName>EMERALD</fullName>
            </value>
            <value>
                <fullName>FRASER COAST</fullName>
            </value>
            <value>
                <fullName>GATTON</fullName>
            </value>
            <value>
                <fullName>GLADSTONE</fullName>
            </value>
            <value>
                <fullName>GOLD COAST</fullName>
            </value>
            <value>
                <fullName>GRAFTON</fullName>
            </value>
            <value>
                <fullName>GYMPIE</fullName>
            </value>
            <value>
                <fullName>IPSWICH</fullName>
            </value>
            <value>
                <fullName>KINGAROY</fullName>
            </value>
            <value>
                <fullName>LISMORE</fullName>
            </value>
            <value>
                <fullName>MACKAY</fullName>
            </value>
            <value>
                <fullName>MELBOURNE</fullName>
            </value>
            <value>
                <fullName>MILTON</fullName>
            </value>
            <value>
                <fullName>ONLINE</fullName>
            </value>
            <value>
                <fullName>ROCKHAMPTON</fullName>
            </value>
            <value>
                <fullName>RURAL WEEKLY</fullName>
            </value>
            <value>
                <fullName>SUNSHINE COAST</fullName>
            </value>
            <value>
                <fullName>SURAT BASIN</fullName>
            </value>
            <value>
                <fullName>SYDNEY</fullName>
            </value>
            <value>
                <fullName>TOOWOOMBA</fullName>
            </value>
            <value>
                <fullName>TWEED</fullName>
            </value>
            <value>
                <fullName>WARWICK</fullName>
            </value>
            <value>
                <fullName>SENIORS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>