News UAT/force-app/main/default/objects/Account__x/fields/Account_c__c.field-meta.xml
<CustomField>
    <fullName>Account_c__c</fullName>
    <externalDeveloperName>Account__c</externalDeveloperName>
    <label>Account (Lookup)</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>