News UAT/force-app/main/default/objects/Account__x/fields/Account_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_c__c</fullName>
    <externalDeveloperName>Account_ID__c</externalDeveloperName>
    <label>Account ID</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>