News UAT/force-app/main/default/objects/Account__x/fields/Account_Override_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Override_Reason_c__c</fullName>
    <externalDeveloperName>Account_Override_Reason__c</externalDeveloperName>
    <label>SIS.Account Override Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>