News UAT/force-app/main/default/objects/Account__x/fields/Account_Plan_Required_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Required_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Account_Plan_Required__c</externalDeveloperName>
    <label>Strategic Account Plan Required</label>
    <type>Checkbox</type>
</CustomField>