News UAT/force-app/main/default/objects/Account__x/fields/Account_purged_from_Cybersell_c__c.field-meta.xml
<CustomField>
    <fullName>Account_purged_from_Cybersell_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Account_purged_from_Cybersell__c</externalDeveloperName>
    <label>Account purged from Cybersell</label>
    <type>Checkbox</type>
</CustomField>