News UAT/force-app/main/default/objects/Account__x/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <externalDeveloperName>AccountNumber</externalDeveloperName>
    <label>Company Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>