News UAT/force-app/main/default/objects/Account__x/fields/Active_c__c.field-meta.xml
<CustomField>
    <fullName>Active_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Active__c</externalDeveloperName>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>