News UAT/force-app/main/default/objects/Account__x/fields/Active_Flag_c__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag_c__c</fullName>
    <externalDeveloperName>Active_Flag__c</externalDeveloperName>
    <label>Active?</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>