News UAT/force-app/main/default/objects/Account__x/fields/Activity_This_Month_c__c.field-meta.xml
<CustomField>
    <fullName>Activity_This_Month_c__c</fullName>
    <externalDeveloperName>Activity_This_Month__c</externalDeveloperName>
    <label>Activity This APN Month</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>