News UAT/force-app/main/default/objects/Account__x/fields/Additional_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_c__c</fullName>
    <externalDeveloperName>Additional_Comments__c</externalDeveloperName>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>