News UAT/force-app/main/default/objects/Account__x/fields/Affiliated_Account_c__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Account_c__c</fullName>
    <externalDeveloperName>Affiliated_Account__c</externalDeveloperName>
    <label>Affiliated Account</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies2</relationshipName>
    <type>ExternalLookup</type>
</CustomField>