News UAT/force-app/main/default/objects/Account__x/fields/Affiliated_with_National_Account_c__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_with_National_Account_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Affiliated_with_National_Account__c</externalDeveloperName>
    <label>Affiliated with National Account</label>
    <type>Checkbox</type>
</CustomField>