News UAT/force-app/main/default/objects/Account__x/fields/Agency_c__c.field-meta.xml
<CustomField>
    <fullName>Agency_c__c</fullName>
    <externalDeveloperName>Agency__c</externalDeveloperName>
    <label>Agency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>