News UAT/force-app/main/default/objects/Account__x/fields/AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue__c</fullName>
    <externalDeveloperName>AnnualRevenue</externalDeveloperName>
    <label>Expected Advertising Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>