News UAT/force-app/main/default/objects/Account__x/fields/APN_Last_Activity_Date_c__c.field-meta.xml
<CustomField>
    <fullName>APN_Last_Activity_Date_c__c</fullName>
    <externalDeveloperName>APN_Last_Activity_Date__c</externalDeveloperName>
    <label>XXXAPN Last Activity Date</label>
    <type>Date</type>
</CustomField>