News UAT/force-app/main/default/objects/Account__x/fields/APN_Last_Activity_Dt_c__c.field-meta.xml
<CustomField>
    <fullName>APN_Last_Activity_Dt_c__c</fullName>
    <externalDeveloperName>APN_Last_Activity_Dt__c</externalDeveloperName>
    <label>APN Last Activity Date</label>
    <type>DateTime</type>
</CustomField>