News UAT/force-app/main/default/objects/Account__x/fields/APN_Month_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>APN_Month_Start_Date_c__c</fullName>
    <externalDeveloperName>APN_Month_Start_Date__c</externalDeveloperName>
    <label>APN Month Start Date</label>
    <type>Date</type>
</CustomField>