News UAT/force-app/main/default/objects/Account__x/fields/Approach_Locally_c__c.field-meta.xml
<CustomField>
    <fullName>Approach_Locally_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Approach_Locally__c</externalDeveloperName>
    <label>Approach Locally</label>
    <type>Checkbox</type>
</CustomField>