News UAT/force-app/main/default/objects/Account__x/fields/Billing_Account_c__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_c__c</fullName>
    <externalDeveloperName>Billing_Account__c</externalDeveloperName>
    <label>Billing Account</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies3</relationshipName>
    <type>ExternalLookup</type>
</CustomField>