News UAT/force-app/main/default/objects/Account__x/fields/Billing_Address_c__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_c__c</fullName>
    <externalDeveloperName>Billing_Address__c</externalDeveloperName>
    <label>Change Billing Details</label>
    <type>TextArea</type>
</CustomField>