News UAT/force-app/main/default/objects/Account__x/fields/billing_contact_name_c__c.field-meta.xml
<CustomField>
    <fullName>billing_contact_name_c__c</fullName>
    <externalDeveloperName>billing_contact_name__c</externalDeveloperName>
    <label>Billing Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>