News UAT/force-app/main/default/objects/Account__x/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <externalDeveloperName>BillingPostalCode</externalDeveloperName>
    <label>Billing Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>