News UAT/force-app/main/default/objects/Account__x/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <externalDeveloperName>BillingState</externalDeveloperName>
    <label>Billing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>