News UAT/force-app/main/default/objects/Account__x/fields/BU_Client_Group_c__c.field-meta.xml
<CustomField>
    <fullName>BU_Client_Group_c__c</fullName>
    <externalDeveloperName>BU_Client_Group__c</externalDeveloperName>
    <label>BU Client Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>