News UAT/force-app/main/default/objects/Account__x/fields/Business_Finda_Classification_c__c.field-meta.xml
<CustomField>
    <fullName>Business_Finda_Classification_c__c</fullName>
    <externalDeveloperName>Business_Finda_Classification__c</externalDeveloperName>
    <label>Business Finda Classification</label>
    <type>TextArea</type>
</CustomField>