News UAT/force-app/main/default/objects/Account__x/fields/Business_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_c__c</fullName>
    <externalDeveloperName>Business_Type__c</externalDeveloperName>
    <label>Business Type</label>
    <type>TextArea</type>
</CustomField>