News UAT/force-app/main/default/objects/Account__x/fields/Business_Type_Description_c__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Description_c__c</fullName>
    <externalDeveloperName>Business_Type_Description__c</externalDeveloperName>
    <label>Business Group</label>
    <type>TextArea</type>
</CustomField>