News UAT/force-app/main/default/objects/Account__x/fields/Business_Unit_c__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_c__c</fullName>
    <externalDeveloperName>Business_Unit__c</externalDeveloperName>
    <label>Business Unit</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>