News UAT/force-app/main/default/objects/Account__x/fields/Business_Unit_Lead_c__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Lead_c__c</fullName>
    <externalDeveloperName>Business_Unit_Lead__c</externalDeveloperName>
    <label>Business Unit Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bay of Plenty</fullName>
            </value>
            <value>
                <fullName>Capital Communities</fullName>
            </value>
            <value>
                <fullName>Christchurch</fullName>
            </value>
            <value>
                <fullName>Hamilton</fullName>
            </value>
            <value>
                <fullName>Hawkes Bay</fullName>
            </value>
            <value>
                <fullName>Levin/Manawatu</fullName>
            </value>
            <value>
                <fullName>Northern</fullName>
            </value>
            <value>
                <fullName>NZ Herald</fullName>
            </value>
            <value>
                <fullName>NZ Magazines</fullName>
            </value>
            <value>
                <fullName>Oamaru</fullName>
            </value>
            <value>
                <fullName>Pahiatua Bush</fullName>
            </value>
            <value>
                <fullName>Presspak</fullName>
            </value>
            <value>
                <fullName>Rotorua</fullName>
            </value>
            <value>
                <fullName>Stratford</fullName>
            </value>
            <value>
                <fullName>Te Awamutu</fullName>
            </value>
            <value>
                <fullName>Wairarapa</fullName>
            </value>
            <value>
                <fullName>Wanganui</fullName>
            </value>
            <value>
                <fullName>Whakatane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>