News UAT/force-app/main/default/objects/Account__x/fields/Category_c__c.field-meta.xml
<CustomField>
    <fullName>Category_c__c</fullName>
    <externalDeveloperName>Category__c</externalDeveloperName>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>