News UAT/force-app/main/default/objects/Account__x/fields/Category_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Category_Code_c__c</fullName>
    <externalDeveloperName>Category_Code__c</externalDeveloperName>
    <label>Category Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>ADULT</fullName>
            </value>
            <value>
                <fullName>APPL</fullName>
            </value>
            <value>
                <fullName>ART</fullName>
            </value>
            <value>
                <fullName>AUCT</fullName>
            </value>
            <value>
                <fullName>AUTAC</fullName>
            </value>
            <value>
                <fullName>BABY</fullName>
            </value>
            <value>
                <fullName>BAKE</fullName>
            </value>
            <value>
                <fullName>BATT</fullName>
            </value>
            <value>
                <fullName>BEAUT</fullName>
            </value>
            <value>
                <fullName>BEV</fullName>
            </value>
            <value>
                <fullName>BIKE</fullName>
            </value>
            <value>
                <fullName>BLIND</fullName>
            </value>
            <value>
                <fullName>BOAT</fullName>
            </value>
            <value>
                <fullName>BODY</fullName>
            </value>
            <value>
                <fullName>BOOK</fullName>
            </value>
            <value>
                <fullName>BRIDE</fullName>
            </value>
            <value>
                <fullName>BUILD</fullName>
            </value>
            <value>
                <fullName>CARA</fullName>
            </value>
            <value>
                <fullName>CARS</fullName>
            </value>
            <value>
                <fullName>CARW</fullName>
            </value>
            <value>
                <fullName>CHEM</fullName>
            </value>
            <value>
                <fullName>CHILD</fullName>
            </value>
            <value>
                <fullName>CHUR</fullName>
            </value>
            <value>
                <fullName>CLEAN</fullName>
            </value>
            <value>
                <fullName>CLOTH</fullName>
            </value>
            <value>
                <fullName>CLUBS</fullName>
            </value>
            <value>
                <fullName>COMP</fullName>
            </value>
            <value>
                <fullName>COUR</fullName>
            </value>
            <value>
                <fullName>CRAFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>