News UAT/force-app/main/default/objects/Account__x/fields/Change_Industry_NZ_To_c__c.field-meta.xml
<CustomField>
    <fullName>Change_Industry_NZ_To_c__c</fullName>
    <externalDeveloperName>Change_Industry_NZ_To__c</externalDeveloperName>
    <label>Change Industry NZ To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - Agriculture</fullName>
            </value>
            <value>
                <fullName>B - Beverages</fullName>
            </value>
            <value>
                <fullName>C - Computers</fullName>
            </value>
            <value>
                <fullName>D - Govt Departments</fullName>
            </value>
            <value>
                <fullName>E - Leisure, Enter</fullName>
            </value>
            <value>
                <fullName>F - Foodstuffs</fullName>
            </value>
            <value>
                <fullName>G - Gardening</fullName>
            </value>
            <value>
                <fullName>H - Real Estate</fullName>
            </value>
            <value>
                <fullName>I - Insurance</fullName>
            </value>
            <value>
                <fullName>J - Industrial</fullName>
            </value>
            <value>
                <fullName>K - Clothing</fullName>
            </value>
            <value>
                <fullName>L - Invest/Fin/Bank</fullName>
            </value>
            <value>
                <fullName>M - Automotive</fullName>
            </value>
            <value>
                <fullName>N - Business Serv</fullName>
            </value>
            <value>
                <fullName>O - Office</fullName>
            </value>
            <value>
                <fullName>P - Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Q - Toiletry, Cosmet</fullName>
            </value>
            <value>
                <fullName>R - Retail</fullName>
            </value>
            <value>
                <fullName>S - Smoking</fullName>
            </value>
            <value>
                <fullName>T - Travel</fullName>
            </value>
            <value>
                <fullName>U - Home Improve</fullName>
            </value>
            <value>
                <fullName>V - T&#39;communication</fullName>
            </value>
            <value>
                <fullName>W - Transportation</fullName>
            </value>
            <value>
                <fullName>X - Miscellaneous</fullName>
            </value>
            <value>
                <fullName>1 - H&#39;holdClean Prod</fullName>
            </value>
            <value>
                <fullName>2 - H&#39;hold Elec Prod</fullName>
            </value>
            <value>
                <fullName>3 - H&#39;hold Furnish</fullName>
            </value>
            <value>
                <fullName>4 - H&#39;hold Home Heat</fullName>
            </value>
            <value>
                <fullName>5 - H&#39;hold Items</fullName>
            </value>
            <value>
                <fullName>6 - Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>