News UAT/force-app/main/default/objects/Account__x/fields/Change_Phone_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Change_Phone_Number_c__c</fullName>
    <externalDeveloperName>Change_Phone_Number__c</externalDeveloperName>
    <label>Change Phone Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>