News UAT/force-app/main/default/objects/Account__x/fields/Change_Primary_Account_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Change_Primary_Account_Manager_c__c</fullName>
    <externalDeveloperName>Change_Primary_Account_Manager__c</externalDeveloperName>
    <label>Change Primary Account Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>