News UAT/force-app/main/default/objects/Account__x/fields/Change_Request_Denied_c__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Denied_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Change_Request_Denied__c</externalDeveloperName>
    <label>Change Request Denied?</label>
    <type>Checkbox</type>
</CustomField>