News UAT/force-app/main/default/objects/Account__x/fields/Change_Salesforce_Cyber_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Change_Salesforce_Cyber_Email_c__c</fullName>
    <externalDeveloperName>Change_Salesforce_Cyber_Email__c</externalDeveloperName>
    <label>Change Salesforce/Cyber Email</label>
    <type>Email</type>
</CustomField>