News UAT/force-app/main/default/objects/Account__x/fields/Change_Statement_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Change_Statement_Email_c__c</fullName>
    <externalDeveloperName>Change_Statement_Email__c</externalDeveloperName>
    <label>Change Statement Email</label>
    <type>Email</type>
</CustomField>