News UAT/force-app/main/default/objects/Account__x/fields/City_c__c.field-meta.xml
<CustomField>
    <fullName>City_c__c</fullName>
    <externalDeveloperName>City__c</externalDeveloperName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>