News UAT/force-app/main/default/objects/Account__x/fields/Classified_Account_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>Classified_Account_Manager_c__c</fullName>
    <externalDeveloperName>Classified_Account_Manager__c</externalDeveloperName>
    <label>Classified Account Manager</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>ExternalLookup</type>
</CustomField>