News UAT/force-app/main/default/objects/Account__x/fields/Classified_Account_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Classified_Account_Type_c__c</fullName>
    <externalDeveloperName>Classified_Account_Type__c</externalDeveloperName>
    <label>Classified Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Managed</fullName>
            </value>
            <value>
                <fullName>Funeral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>