News UAT/force-app/main/default/objects/Account__x/fields/Club_NZ_c__c.field-meta.xml
<CustomField>
    <fullName>Club_NZ_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Club_NZ__c</externalDeveloperName>
    <label>Club</label>
    <type>Checkbox</type>
</CustomField>