News UAT/force-app/main/default/objects/Account__x/fields/Cms_LYTD_TEST_c__c.field-meta.xml
<CustomField>
    <fullName>Cms_LYTD_TEST_c__c</fullName>
    <externalDeveloperName>Cms_LYTD_TEST__c</externalDeveloperName>
    <label>Cms LYTD (TEST)</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>