News UAT/force-app/main/default/objects/Account__x/fields/Company_email_c__c.field-meta.xml
<CustomField>
    <fullName>Company_email_c__c</fullName>
    <externalDeveloperName>Company_email__c</externalDeveloperName>
    <label>Company email</label>
    <type>Email</type>
</CustomField>