News UAT/force-app/main/default/objects/Account__x/fields/Company_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Company_ID_c__c</fullName>
    <externalDeveloperName>Company_ID__c</externalDeveloperName>
    <label>Lead ID</label>
    <length>30</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>